# todo

./: .gitignore  Cargo.toml  README.md  db.sqlite
.github/workflows/: lint.yml  test.yml
migrations/: 20230819190045_initial-tables.sql
src/: build.rs  controller.rs  lib.rs  main.rs  sqlite.rs
src/render/: mod.rs  term.rs
src/store/: mod.rs  sqlite.rs
