[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="todo_lib"
path="src/lib.rs"

[[bin]]
name="todo"
path="src/main.rs"

[dependencies]
async-trait = "0.1.73"
cuid = "1.3.2"
cuid2 = "0.1.2"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1", features = ["full"] }
